syntax = "proto3";

package notif.middleware.notif.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/notif/middleware/v1/notif";

import "google/api/annotations.proto";
import "basetypes/v1/channel.proto";
import "basetypes/v1/usedfor.proto";
import "basetypes/v1/conds.proto";
import "basetypes/v1/notiftype.proto";
import "notif/middleware/v1/template/template.proto";

message Notif {
  // @inject_tag: sql:"id"
  uint32 ID = 9;
  // @inject_tag: sql:"ent_id"
  string EntID = 10;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"user_id"
  string UserID = 30;
  // @inject_tag: sql:"notified"
  bool Notified = 40;
  // @inject_tag: sql:"lang_id"
  string LangID = 50;
  // @inject_tag: sql:"event_type"
  string EventTypeStr = 59;
  basetypes.v1.UsedFor EventType = 60;
  // @inject_tag: sql:"use_template"
  bool UseTemplate = 70;
  // @inject_tag: sql:"title"
  string Title = 80;
  // @inject_tag: sql:"content"
  string Content = 90;
  // @inject_tag: sql:"channel"
  string ChannelStr = 99;
  basetypes.v1.NotifChannel Channel = 100;
  // @inject_tag: sql:"extra"
  string Extra = 110;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 120;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 130;
  // @inject_tag: sql:"event_id"
  string EventID = 140;
  // @inject_tag: sql:"type"
  string NotifTypeStr = 149;
  basetypes.v1.NotifType NotifType = 150;
}

message NotifReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string UserID = 30;
  optional bool Notified = 40;
  optional string LangID = 50;
  optional basetypes.v1.UsedFor EventType = 60;
  optional bool UseTemplate = 70;
  optional string Title = 80;
  optional string Content = 90;
  optional basetypes.v1.NotifChannel Channel = 100;
  optional string Extra = 110;
  optional string EventID = 120;
  optional basetypes.v1.NotifType NotifType = 130;
}

message Conds {
  optional basetypes.v1.Uint32Val ID = 9;
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringSliceVal EntIDs = 11;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal UserID = 30;
  optional basetypes.v1.BoolVal Notified = 40;
  optional basetypes.v1.StringVal LangID = 50;
  optional basetypes.v1.Uint32Val EventType = 60;
  optional basetypes.v1.BoolVal UseTemplate = 70;
  optional basetypes.v1.Uint32SliceVal Channels = 80;
  optional basetypes.v1.Uint32Val Channel = 90;
  optional basetypes.v1.Uint32SliceVal EventTypes = 100;
  optional basetypes.v1.StringVal Extra = 110;
  optional basetypes.v1.StringVal EventID = 120;
  optional basetypes.v1.StringSliceVal EventIDs = 121;
  optional basetypes.v1.Uint32Val NotifType = 130;
  optional basetypes.v1.Uint32SliceVal IDs = 140;
}

